--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
 }
 
+/* body:not(header) {
+  margin-left: 30px;
+} */
 header {
   background-color: #7FFFD3;
   padding: 20px 30px;
@@ -12,6 +15,12 @@ header {
 h1 {
   font-size: 3.0em;
   line-height: 1.1;
+}
+
+h2 {
+  margin: 20px 0;
+  font-size: 1.8em;
+  font-weight: 900;
 }
 
 
