--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ h2 {
 }
 
 
+.state-description {
+  margin-left: 5px;
+  padding: 8px 10px;
+  background-color: #D2691E;
+  color: white;
+}
+
 /* body {
   margin: 0;
   display: flex;
