--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,19 @@
   box-sizing: border-box;
 }
 
-/* body:not(header) {
-  margin-left: 30px;
-} */
+body {
+  font-family: "Roboto", serif;
+}
+
 header {
   background-color: #7FFFD3;
   padding: 20px;
 }
+
+section {
+  margin-left: 30px;
+}
+
 h1 {
   font-size: 3.0em;
   line-height: 1.1;
@@ -23,6 +29,24 @@ h2 {
   font-weight: 900;
 }
 
+h3 {
+  padding: 10px 0 5px 0;
+  font-weight: 900;
+}
+
+p {
+  line-height: 1.5;
+}
+
+ul {
+  list-style-type: none;
+}
+
+hr {
+  margin: 30px 0 5px 0;
+  border-width: 2px;
+}
+
 /* Classi per gli stati dinamici */
 .state-completed {
   margin-left: 5px;
@@ -30,6 +54,7 @@ h2 {
   background-color: #1ed245;
   color: white;
 }
+
 .state-inprogress {
   margin-left: 5px;
   padding: 8px 10px;
@@ -43,35 +68,5 @@ h2 {
   background-color: red;
   color: white;
 }
+
 /* Fine classi per gli stati dinamici */
-
-
-
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
