--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,6 @@
 
 body {
   font-family: "Roboto", serif;
-  width: 1200px;
-  margin: 0 auto;
 }
 
 header {
@@ -18,6 +16,8 @@ header {
 
 section {
   margin-left: 30px;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -42,6 +42,7 @@ p {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 hr {
